--- a/example-module/pom.xml
+++ b/example-module/pom.xml
@@ -9,7 +9,7 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>exampleModule</artifactId>
+    <artifactId>example-module</artifactId>
 
     <properties>
         <maven.compiler.source>11</maven.compiler.source>
