--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,6 +20,12 @@ services:
       ME_CONFIG_MONGODB_ADMINPASSWORD: rootpass
       ME_CONFIG_MONGODB_SERVER: mongodb
 #      - ME_CONFIG_MONGODB_URL=mongodb://root:example@mongo:27017/
+  rabbitmq:
+    image: rabbitmq:3.10.6-management-alpine
+    container_name: rabbitmq
+    ports:
+      - "5672:5672"
+      - "15672:15672"
 volumes:
   data: {}
 
