--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -30,5 +30,9 @@ volumes:
   data: {}
 
 networks:
-  default:
-    name: mongodb_network
+#  default:
+#    name: mongodb_network
+  mongodb:
+    driver: bridge
+  rabbitmq:
+    driver: bridge
