--- a/example-module/pom.xml
+++ b/example-module/pom.xml
@@ -39,7 +39,7 @@
         </dependency>
         <dependency>
             <groupId>comments.app</groupId>
-            <artifactId>rabbitmq</artifactId>
+            <artifactId>components</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
     </dependencies>
