refactor progress, functional receiver mongodbapp and sse-app

--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,7 @@
         <module>sse-app</module>
         <module>components</module>
         <module>receiver</module>
+        <module>mongodbapp</module>
     </modules>
 
     <name>comments-app</name>
