--- a/sse-app/src/main/resources/application.yaml
+++ b/sse-app/src/main/resources/application.yaml
@@ -3,9 +3,9 @@ server:
 
 rabbitmq:
   port: 5672
-  exchanges:
-    internal: internal.exchange
+#  exchanges:
+#    internal: internal.exchange
   queues:
-    notification: notification.queue
-  routing-keys:
-    internal-notification: internal.notification.routing-key
+    mongodb: mongodb.queue
+#  routing-keys:
+#    internal-notification: internal.notification.routing-key
