package rename, epoch timestamp minor change in CommentController

--- a/pom.xml
+++ b/pom.xml
@@ -13,7 +13,7 @@
         <module>sse-app</module>
         <module>components</module>
         <module>receiver</module>
-        <module>mongodbapp</module>
+        <module>mongodb-app</module>
     </modules>
 
     <name>comments-app</name>
