added getall endpoint in sse-app, need to move mongodb commons into components

--- a/sse-app/src/main/resources/application.yml
+++ b/sse-app/src/main/resources/application.yml
@@ -1,6 +1,16 @@
 server:
   port: 8080
 
+spring:
+  data:
+    mongodb:
+      authentication-database: admin
+      username: rootuser
+      password: rootpass
+      database: databasename
+      port: 27017
+      auto-index-creation: true
+
 #rabbitmq:
 #  port: 5672
 ##  exchanges:
