--- a/mongodb-app/pom.xml
+++ b/mongodb-app/pom.xml
@@ -9,7 +9,7 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>mongodb</artifactId>
+    <artifactId>mongodb-app</artifactId>
 
     <properties>
         <maven.compiler.source>11</maven.compiler.source>
@@ -27,7 +27,7 @@
         </dependency>
         <dependency>
             <groupId>comments.app</groupId>
-            <artifactId>components</artifactId>
+            <artifactId>commons</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
     </dependencies>
