--- a/write-api/pom.xml
+++ b/write-api/pom.xml
@@ -9,7 +9,7 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>receiver</artifactId>
+    <artifactId>write-api</artifactId>
 
     <properties>
         <maven.compiler.source>11</maven.compiler.source>
@@ -31,7 +31,7 @@
         </dependency>
         <dependency>
             <groupId>comments.app</groupId>
-            <artifactId>components</artifactId>
+            <artifactId>commons</artifactId>
             <version>1.0-SNAPSHOT</version>
             <scope>compile</scope>
         </dependency>
