--- a/mongodb-app/src/main/resources/application.yml
+++ b/mongodb-app/src/main/resources/application.yml
@@ -1,14 +1,14 @@
 spring:
   application:
     name: mongodbapp
-  data:
-    mongodb:
-      authentication-database: admin
-      username: rootuser
-      password: rootpass
-      database: databasename
-      port: 27017
-      auto-index-creation: true
+#  data:
+#    mongodb:
+#      authentication-database: admin
+#      username: rootuser
+#      password: rootpass
+#      database: databasename
+#      port: 27017
+#      auto-index-creation: true
 
 #rabbitmq:
 #  port: 5672
