--- a/view-api/src/main/resources/application.yml
+++ b/view-api/src/main/resources/application.yml
@@ -1,15 +1,15 @@
 server:
   port: 8080
 
-spring:
-  data:
-    mongodb:
-      authentication-database: admin
-      username: rootuser
-      password: rootpass
-      database: databasename
-      port: 27017
-      auto-index-creation: true
+#spring:
+#  data:
+#    mongodb:
+#      authentication-database: admin
+#      username: rootuser
+#      password: rootpass
+#      database: databasename
+#      port: 27017
+#      auto-index-creation: true
 
 #rabbitmq:
 #  port: 5672
