--- a/pom.xml
+++ b/pom.xml
@@ -24,7 +24,7 @@
         <maven.compiler.source>11</maven.compiler.source>
         <maven.compiler.target>11</maven.compiler.target>
         <spring.boot.maven.version>2.5.7</spring.boot.maven.version>
-        <spring.boot.dependencies.version>2.5.7</spring.boot.dependencies.version>
+        <spring.boot.dependencies.version>2.7.0</spring.boot.dependencies.version>
     </properties>
 
     <dependencies>
@@ -66,50 +66,28 @@
                 <plugin>
                     <groupId>org.springframework.boot</groupId>
                     <artifactId>spring-boot-maven-plugin</artifactId>
-                    <version>${spring.boot.maven.version}</version>
+                    <version>${spring.boot.maven.plugin.version}</version>
+                    <executions>
+                        <execution>
+                            <goals>
+                                <goal>repackage</goal>
+                            </goals>
+                        </execution>
+                    </executions>
                 </plugin>
-
-
-                <!-- clean lifecycle, see https://maven.apache.org/ref/current/maven-core/lifecycles.html#clean_Lifecycle -->
-                <!--        <plugin>-->
-                <!--          <artifactId>maven-clean-plugin</artifactId>-->
-                <!--          <version>3.1.0</version>-->
-                <!--        </plugin>-->
-                <!--        &lt;!&ndash; default lifecycle, jar packaging: see https://maven.apache.org/ref/current/maven-core/default-bindings.html#Plugin_bindings_for_jar_packaging &ndash;&gt;-->
-                <!--        <plugin>-->
-                <!--          <artifactId>maven-resources-plugin</artifactId>-->
-                <!--          <version>3.0.2</version>-->
-                <!--        </plugin>-->
-                <!--        <plugin>-->
-                <!--          <artifactId>maven-compiler-plugin</artifactId>-->
-                <!--          <version>3.8.0</version>-->
-                <!--        </plugin>-->
-                <!--        <plugin>-->
-                <!--          <artifactId>maven-surefire-plugin</artifactId>-->
-                <!--          <version>2.22.1</version>-->
-                <!--        </plugin>-->
-                <!--        <plugin>-->
-                <!--          <artifactId>maven-jar-plugin</artifactId>-->
-                <!--          <version>3.0.2</version>-->
-                <!--        </plugin>-->
-                <!--        <plugin>-->
-                <!--          <artifactId>maven-install-plugin</artifactId>-->
-                <!--          <version>2.5.2</version>-->
-                <!--        </plugin>-->
-                <!--        <plugin>-->
-                <!--          <artifactId>maven-deploy-plugin</artifactId>-->
-                <!--          <version>2.8.2</version>-->
-                <!--        </plugin>-->
-                <!--        &lt;!&ndash; site lifecycle, see https://maven.apache.org/ref/current/maven-core/lifecycles.html#site_Lifecycle &ndash;&gt;-->
-                <!--        <plugin>-->
-                <!--          <artifactId>maven-site-plugin</artifactId>-->
-                <!--          <version>3.7.1</version>-->
-                <!--        </plugin>-->
-                <!--        <plugin>-->
-                <!--          <artifactId>maven-project-info-reports-plugin</artifactId>-->
-                <!--          <version>3.0.0</version>-->
-                <!--        </plugin>-->
             </plugins>
         </pluginManagement>
+
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.8.0</version>
+                <configuration>
+                    <source>11</source>
+                    <target>11</target>
+                </configuration>
+            </plugin>
+        </plugins>
     </build>
 </project>
