--- a/Dockerfile-view
+++ b/Dockerfile-view
@@ -1,4 +1,4 @@
-FROM maven:3.8.6-eclipse-temurin-11-alpine AS build
+FROM maven:3.8.6-openjdk-11-slim AS build
 
 
 WORKDIR /comments-app
@@ -7,7 +7,7 @@ ADD ./commons ./commons
 ADD ./pom.xml .
 ADD ./mongodb-app/pom.xml ./mongodb-app/pom.xml
 ADD ./write-api/pom.xml ./write-api/pom.xml
-ADD ./view-api/pom.xml ./view-api/pom.xml
+#ADD ./view-api/pom.xml ./view-api/pom.xml
 ADD ./view-api ./view-api
 #RUN mvn clean install -Dmaven.test.skip=true -DexcludeArtifactIds=mongodb-app,write-api
 RUN mvn clean install -N -Dmaven.test.skip=true
@@ -15,11 +15,11 @@ RUN mvn clean install -pl commons -Dmaven.test.skip=true
 
 
 # COPY view-api/src /view-app/view-api/src
-RUN mvn clean install -pl view-api -Dmaven.test.skip=true -e
+RUN mvn clean install -pl view-api -Dmaven.test.skip=true
 #
 # Package stage
 #
-FROM adoptopenjdk/openjdk11:jre-11.0.6_10-alpine
+FROM openjdk:11-jdk-slim
 COPY --from=build /root/.m2 /root/.m2
 COPY --from=build /comments-app/view-api/target/view-api-1.0-SNAPSHOT.jar /usr/local/lib/view-api-1.0-SNAPSHOT.jar
 EXPOSE 8080
