--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,12 +9,14 @@ services:
     environment:
       MONGO_INITDB_ROOT_USERNAME: rootuser
       MONGO_INITDB_ROOT_PASSWORD: rootpass
+    networks:
+      - mongodb
   mongo-express:
     image: mongo-express
     container_name: mongo-express
     restart: always
     ports:
-      - 8081:8081
+      - "9099:8081"
     environment:
       ME_CONFIG_MONGODB_ADMINUSERNAME: rootuser
       ME_CONFIG_MONGODB_ADMINPASSWORD: rootpass
@@ -25,62 +27,44 @@ services:
     ports:
       - "5672:5672"
       - "15672:15672"
-  comments-view-app:
-#    build:
-#      context: view-api
-#      args:
-#        JAR_FILE: /target/view-api-1.0-SNAPSHOT.jar
-#        PORT: 8080
-    image: view-api:1.0-SNAPSHOT
-    container_name: comments-view-app
+    networks:
+      - mongodb
+  view-app:
+    build:
+      context: .
+      dockerfile: Dockerfile-view
+    container_name: view-app
     ports:
       - "8080:8080"
     environment:
       - SPRING_PROFILES_ACTIVE=docker
     networks:
-      - spring
       - mongodb
       - rabbitmq
     depends_on:
       - mongodb
       - rabbitmq
-
-
-  comments-write-app:
-    #    build:
-    #      context: view-api
-    #      args:
-    #        JAR_FILE: /target/view-api-1.0-SNAPSHOT.jar
-    #        PORT: 8080
-    image: write-api:1.0-SNAPSHOT
+  write-app:
+    build:
+      context: .
+      dockerfile: Dockerfile-write
     container_name: write-app
     ports:
-      - "8088:8088"
+      - "8088:8080"
     environment:
       - SPRING_PROFILES_ACTIVE=docker
     networks:
-      - spring
       - rabbitmq
     depends_on:
-      - spring
-      - mongodb
       - rabbitmq
-
-
   mongodb-app:
-    #    build:
-    #      context: view-api
-    #      args:
-    #        JAR_FILE: /target/view-api-1.0-SNAPSHOT.jar
-    #        PORT: 8080
-    image: mongodb-app:1.0-SNAPSHOT
+    build:
+      context: .
+      dockerfile: Dockerfile-write
     container_name: mongodb-app
-#    ports:
-#      - "9090:9090"
     environment:
       - SPRING_PROFILES_ACTIVE=docker
     networks:
-      - spring
       - mongodb
       - rabbitmq
     depends_on:
@@ -91,11 +75,7 @@ volumes:
   data: {}
 
 networks:
-#  default:
-#    name: mongodb_network
-  mongodb:
-    driver: bridge
   rabbitmq:
     driver: bridge
-  spring:
+  mongodb:
     driver: bridge
