--- a/commons/src/main/resources/rabbitmq-docker.yml
+++ b/commons/src/main/resources/rabbitmq-docker.yml
@@ -1,7 +1,4 @@
 rabbitmq:
-  addresses: rabbitmq:5672
-#  port: 5672
-#  host: rabbitmq
   exchanges:
     view: view.fan
     receiver: receiver.topic
@@ -10,3 +7,8 @@ rabbitmq:
     view: view.queue
   routing-keys:
     receiver: receiver.routing-key
+
+spring:
+  rabbitmq:
+    host: rabbitmq
+    port: 5672
