--- a/Dockerfile-mongodb-app
+++ b/Dockerfile-mongodb-app
@@ -2,17 +2,14 @@ FROM maven:3.8.6-openjdk-11-slim AS mongobuild
 
 WORKDIR /comments-app
 
-ADD ./commons ./commons
-ADD ./pom.xml .
-ADD ./view-api/pom.xml ./view-appi/pom.xml
-ADD ./write-api/pom.xml ./write-api/pom.xml
-ADD ./mongodb-app ./mongodb-app
+COPY ./commons ./commons
+COPY ./pom.xml .
+COPY ./view-api/pom.xml ./view-appi/pom.xml
+COPY ./write-api/pom.xml ./write-api/pom.xml
+COPY ./mongodb-app ./mongodb-app
 #RUN mvn clean install -Dmaven.test.skip=true -DexcludeArtifactIds=mongodb-app,write-api
 RUN mvn clean install -N -Dmaven.test.skip=true
 RUN mvn clean install -pl commons -Dmaven.test.skip=true
-
-
-# COPY view-api/src /view-app/view-api/src
 RUN mvn clean install -pl mongodb-app -Dmaven.test.skip=true
 #
 # Package stage
