--- a/mongodb-app/pom.xml
+++ b/mongodb-app/pom.xml
@@ -11,10 +11,10 @@
     <packaging>jar</packaging>
     <artifactId>mongodb-app</artifactId>
 
-<!--    <properties>-->
-<!--        <maven.compiler.source>11</maven.compiler.source>-->
-<!--        <maven.compiler.target>11</maven.compiler.target>-->
-<!--    </properties>-->
+    <properties>
+        <maven.compiler.source>11</maven.compiler.source>
+        <maven.compiler.target>11</maven.compiler.target>
+    </properties>
 
     <dependencies>
 <!--        TODO: do we need mongodb here? -->
