--- a/write-api/pom.xml
+++ b/write-api/pom.xml
@@ -49,7 +49,7 @@
                 <artifactId>spring-boot-maven-plugin</artifactId>
                 <version>2.7.0</version>
                 <configuration>
-                    <mainClass>comments.app.receiver.ReceiverApp</mainClass>
+                    <mainClass>comments.app.write.ReceiverApp</mainClass>
                 </configuration>
 
                 <executions>
