--- a/Dockerfile-mongodb-app
+++ b/Dockerfile-mongodb-app
@@ -1,22 +1,21 @@
-FROM maven:3.8.6-openjdk-11-slim AS mongobuild
+FROM maven:3.8.6-openjdk-11-slim AS build
+
 
 WORKDIR /comments-app
 
-COPY ./commons ./commons
-COPY ./pom.xml .
-COPY ./view-api/pom.xml ./view-appi/pom.xml
-COPY ./write-api/pom.xml ./write-api/pom.xml
-COPY ./mongodb-app ./mongodb-app
+ADD ./commons ./commons
+ADD ./pom.xml .
+ADD ./view-api/pom.xml ./view-api/pom.xml
+ADD ./write-api/pom.xml ./write-api/pom.xml
+ADD ./mongodb-app ./mongodb-app
 #RUN mvn clean install -Dmaven.test.skip=true -DexcludeArtifactIds=mongodb-app,write-api
 RUN mvn clean install -N -Dmaven.test.skip=true
 RUN mvn clean install -pl commons -Dmaven.test.skip=true
 RUN mvn clean install -pl mongodb-app -Dmaven.test.skip=true
-#
-# Package stage
-#
+
 FROM openjdk:11-jdk-slim
-COPY --from=mongobuild /root/.m2 /root/.m2
-COPY --from=mongobuild /comments-app/mongodb-app/target/mongodb-app-1.0-SNAPSHOT.jar /usr/local/lib/mongodb-app-1.0-SNAPSHOT.jar
+COPY --from=build /root/.m2 /root/.m2
+COPY --from=build /comments-app/mongodb-app/target/mongodb-app-1.0-SNAPSHOT.jar /usr/local/lib/mongodb-app-1.0-SNAPSHOT.jar
 EXPOSE 9090
 # todo remove --spring.profiles.active=docker and make it an input
 ENTRYPOINT ["java","-jar","/usr/local/lib/mongodb-app-1.0-SNAPSHOT.jar","--spring.profiles.active=docker"]
