--- a/Dockerfile-write
+++ b/Dockerfile-write
@@ -9,9 +9,9 @@ ADD ./mongodb-app/pom.xml ./mongodb-app/pom.xml
 ADD ./view-api/pom.xml ./view-api/pom.xml
 ADD ./write-api ./write-api
 
-RUN mvn clean install -N -Dmaven.test.skip=true
-RUN mvn clean install -pl commons -Dmaven.test.skip=true
-RUN mvn clean install -pl write-api -Dmaven.test.skip=true
+RUN mvn clean install -N
+RUN mvn clean install -pl commons
+RUN mvn clean install -pl write-api
 
 FROM openjdk:11-jdk-slim
 COPY --from=writebuild /root/.m2 /root/.m2
