--- a/Dockerfile-view
+++ b/Dockerfile-view
@@ -1,4 +1,4 @@
-FROM maven:3.8.6-openjdk-11-slim AS build
+FROM maven:3.8.6-openjdk-11-slim AS viewbuild
 
 
 WORKDIR /comments-app
@@ -8,13 +8,13 @@ ADD ./pom.xml .
 ADD ./mongodb-app/pom.xml ./mongodb-app/pom.xml
 ADD ./write-api/pom.xml ./write-api/pom.xml
 ADD ./view-api ./view-api
-#RUN mvn clean install -Dmaven.test.skip=true -DexcludeArtifactIds=mongodb-app,write-api
+
 RUN mvn clean install -N
 RUN mvn clean install -pl commons
 RUN mvn clean install -pl view-api
 
 FROM openjdk:11-jdk-slim
-COPY --from=build /root/.m2 /root/.m2
-COPY --from=build /comments-app/view-api/target/view-api-1.0-SNAPSHOT.jar /usr/local/lib/view-api-1.0-SNAPSHOT.jar
+COPY --from=viewbuild /root/.m2 /root/.m2
+COPY --from=viewbuild /comments-app/view-api/target/view-api-1.0-SNAPSHOT.jar /usr/local/lib/view-api-1.0-SNAPSHOT.jar
 EXPOSE 8080
 ENTRYPOINT ["java","-jar","/usr/local/lib/view-api-1.0-SNAPSHOT.jar","--spring.profiles.active=docker"]
